22 August 2007
+ Rewrote Layout's move box code. Removed drop down boxes.
+ Updated: conf/error.php, templates/move_box_select.tpl

Version 2.4.1 -- 25 July 2007
-------------------------------------------------------------------
27 June 2007
+ Bug #1741111 - Fixed moving a top box up and a bottom box down.

29 May 2007
+ The cookie check is not determined by a define in the config file.
+ Updated files: conf/config.php

22 May 2007
+ The cookie check was interfering with the rss feed. Cut off the page
  too quickly. Moved cookie check to the close.php file.

Version 2.4.0
-------------------------------------------------------------------
16 April 2007
+ Layout now checks and forces a user to enable cookies on their
  browser. 
+ Rewrote Javascript detection. Was buggy before as session
  destruction could disrupt it.
+ Updated files: templates/no_cookie.tpl

4 April 2007
+ Added German translations
+ Updated language functions

19 March 2007
+ Fixed: bug in Layout confused a user's style sheet settings after
  the theme was changed.

12 March 2007
+ Rewrote theme change code.
+ Added ability to force theme on layout settings construction.

5 March 2007
+ Changed control panel icon

Version 2.3.0
-------------------------------------------------------------------
22 February 2007
+ Added missing media tags to XML mode.
+ Added XML mode define to config.php file. Puts layout into xhtml+xml mode.
+ Updated files: conf/config.php

21 February 2007
+ Added missing security checks.

19 February 2007
+ Reduced translate calls.

16 February 2007
+ Added translate functions.
+ Wrote update script

14 February 2007
+ Removed references from object constructors.

19 January 2007
+ Added the plug function to allow users to inject content directly
  into a theme.
+ Layout now looks for and includes a theme's theme.php file.
+ Updated files : conf/config.php

Version 2.2.1
-------------------------------------------------------------------
21 November 2006